jenkins/prod_icp/daytrader_ingress.yaml
{
  "apiVersion": "extensions/v1beta1",
  "kind": "Ingress",
  "metadata": {
    "name": "daytrader",
    "namespace": "default",
    "labels": {
      "app": "daytrader"
    },
    "annotations": {
      "ingress.kubernetes.io/affinity": "cookie",
      "ingress.kubernetes.io/rewrite-target": "/",
      "ingress.kubernetes.io/secure-backends": "true",
      "ingress.kubernetes.io/session-cookie-hash": "sha1",
      "ingress.kubernetes.io/session-cookie-name": "route",
      "kubernetes.io/ingress.class": "nginx"
    }
  },
  "spec": {
    "rules": [
      {
        "http": {
          "paths": [
            {
              "path": "/daytrader/",
              "backend": {
                "serviceName": "daytrader",
                "servicePort": 9443
              }
            }
          ]
        }
      }
    ]
  }
}
